# SynnoDB

./: .env_example  .gitignore  BFF.md  README-DEV.md  README.md  main.py  pyproject.toml  run_add_multi_threading.py  run_check_sf_correctness.py  run_demo.sh  run_ff_base.py  run_ff_planning.py  run_gen_base_impl.py  run_gen_storage_plan.py  run_optim_loop.py  run_standalone_dashboard.py  rust-toolchain.toml
.github/workflows/: lint.yml  no-ai-contributors.yml  publish-to-pypi.yml  tests.yml
conversations/: base_exec_validate.txt  base_impl_conversation.py  check_sf_correctness_conv.py  checkpointed_conversation.py  conversation.py  filenames.py  gen_storage_plan_conversation.py  in_mem_1_optim_conv.py  in_mem_2_mt_conv.py  manual_specs.py  optimization_conversation.py  prompts_gen.py  scripted_conversation.py  ssd_1_st_opt_conv.py  ssd_2_mt_conv.py  stage_config.py
conversations/ff/: base_ff_impl_conversation.py  get_ff_plan_conversation.py  prompts_gen.py
conversations/prompts/: base_correctness_all.txt  base_exec_validate_for_query.txt  base_fix_slow_queries.txt  base_impl_query.txt  base_optimize_build.txt  base_optimize_build_simple.txt  base_run_all_and_fix.txt  gen_storage_plan.txt  optim2_check_large_sf.txt  optim2_constraints.txt  optim2_introduce_threading.txt  optim2_optimize_w_trace.txt  optim2_spawn_threadpool.txt  optim_add_timings_collect_stats_per_query.txt  optim_add_timings_collect_stats_pretext.txt  optim_constraints.txt  optim_pretext_optim.txt  optim_w_human_reference.txt  optim_w_sample_plan.txt  optim_w_trace.txt
conversations/utils/: cleanup_plans.py
cpp_runner/: builder_api.cpp  builder_api.hpp  compiler_cached.py  compiler_utils.py  cpu_affinity.cpp  db.cpp  db_bff.cpp  hotpatch_proc.py  loader_api.hpp  pool.py  proc_utils.py  query_api.cpp  query_api.hpp
cpp_runner/api/: builder_api.cpp  loader_api.cpp  (+1 more)
docs/: CAUGHT_ERRORS_IN_GENERATION.md  DESIGN_router_dataplane.md  TUTORIAL_base_implementation.md  refactor_composable_conversations.md
examples/: routing_demo.py
figures/: plot_sf20_tpch_st.R
generatedcode/: args_parser.hpp  base_impl_todo.txt  bff_format.hpp  create_sample_parquet.py  db_loader.cpp  file_format_plan.txt  file_loader_utils.cpp  generate_bff.cpp  ingest_types.hpp  parquet_reader.cpp  parquet_reader.hpp  query1.cpp  query1.hpp  query2.cpp  query2.hpp  query3.cpp  query3.hpp  query4.cpp  query4.hpp  query5.cpp  query5.hpp  query6.cpp  query6.hpp  query7.cpp  query7.hpp  query8.cpp  query8.hpp  query_impl.cpp  query_utils.hpp  queryutils.cpp  read_impl.cpp  run_sample_query.cpp  write_api.hpp  write_impl.cpp
llm/: models.py
misc/: CAUGHT_ERRORS_IN_GENERATION.md  DESIGN_duckdb_ingest.md  DESIGN_router_dataplane.md  TUTORIAL_base_implementation.md  cgroup_memory_safety.md  future_ETL_expansion.md  get_db_procs.sh  production_hardening_plan.md
misc/router/: analyze_captures.py  demo_embedded.py  docker-compose.yml  pg_router.py  pyproject.toml
misc/router/pgrouter/: cli.py  inspect.py  output.py  query_capture.py  service.py  state.py  testclient.py
misc/router/pgrouter/analyze/: cli.py  normalization.py  repetition.py
misc/router/pgrouter/protocols/: __init__.py  base.py
misc/router/pgrouter/protocols/postgres/: __init__.py  backend.py  encoding.py  server.py  value_decoding.py  wire.py
misc/router/tests/: __init__.py  test_analyze.py  test_catalog_lookup.py  test_embedded_router.py  test_handlers_and_capture.py  test_output.py  test_testclient.py
src/synnodb/cpp_runner/prepare_repo/templates/rust/plugins/builder/: Cargo.toml  lib.rs
src/synnodb/cpp_runner/prepare_repo/templates/rust/plugins/loader/: Cargo.toml  lib.rs
src/synnodb/cpp_runner/prepare_repo/templates/rust/plugins/query/: Cargo.toml  lib.rs
src/synnodb/cpp_runner/prepare_repo/templates/rust/query/: Cargo.toml  args.rs  lib.rs  qX.rs
src/synnodb/rust_runner/synno_rt/: Cargo.toml
src/synnodb/rust_runner/synno_rt/src/: abi.rs  args.rs  egress.rs  ingest.rs  lib.rs  pool.rs  result_writer.rs  shm.rs  trace.rs
synth_framework/: handle_prompt.py
tests/: conftest.py  receipt_helpers.py  test_api_cleanup.py  test_apply_patch_resilience.py  test_base_correctness_scope.py  test_base_optimize_build_prompt.py  test_bff_workload_provider.py  test_build_raii.py  test_burn_in.py  test_byo_sf_ladder.py  test_byo_workload.py  test_cached_compaction_session.py  test_cached_llm_helper.py  test_cgroup_aggregate.py  test_cgroup_sweep.py  test_claude_compaction_helper.py  test_cleanup_plans.py  test_column_egress.py  test_column_ingest.py  test_compaction_trigger.py  test_compile_cache.py  test_compiler_cache_refresh.py  test_cpp_shm.py  test_crash_handler.py  test_cross_check_divergence.py  test_cross_check_limit_ties.py  test_cross_check_matching.py  test_cross_check_nulls.py  test_cross_check_ordering.py  test_cross_language_conformance.py  test_data_inspect.py  test_db_io.py  test_db_launch.py  test_debug_logger.py  test_delete_result_after_read.py  test_delete_result_files.py  test_discovery_adversarial.py  test_display.py  test_downscale_datasets.py  test_duckdb_bff_connection_manager.py  (+91 more)
tests/rust/conformance/: Cargo.toml
tests/rust/conformance/src/: main.rs
tools/: compile.py  custom_apply_patch.py  run.py  run_tool_mode.py  shell_executor.py  tool_call_error_logger.py  workspace_editor.py
tutorials/: 01_quickstart.ipynb  02_explore_threads.py  03_full_run.py  _gen_01_quickstart.py  _gen_notebook.py  _gen_queries.py  ceb_queries.json  clickbench_queries.json  gen_clickbench_demo.ipynb  gen_full_ceb_demo.py  gen_full_music_brainz_demo.py  gen_full_stack_demo.py  gen_full_tpch_demo.py  gen_tpch_demo.ipynb  gen_tpch_demo.py  generate_all.py  queries.json  stack_queries.json  tpch_byo.ipynb
utils/: cli_config.py  confirm_dialog.py  conv_name_utils.py  gen_common.py  get_sample_q_args.py  hugepages.py  model_setup.py  sf_list_gen.py  snapshot_utils.py  utils.py
workloads/: query_execution_cache.py  system_factory.py  system_factory_bff.py  system_factory_olap.py  workload_provider.py  workload_provider_bff.py  workload_provider_olap.py
(+672 files in other folders)
