[project]
name = "synnodb"
version = "0.1.4"
description = "Synthesizing Databases for your Workload"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Johannes Wehrstein", email = "johannes@synnodb.com" },
    { name = "Timo Eckmann", email = "timo@synnodb.com" },
]
keywords = ["database", "llm", "agents", "code-generation", "olap", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "duckdb>=1.4.3",
    "pyarrow>=23.0.1",
    "sqlglot>=25.0.0",   # query normalization / template matching
    "pandas>=2.3.3",     # DuckDB .df() egress; common in user code
    "python-dotenv>=1.2.1",
    "matplotlib>=3.10.9",
    "psutil>=5.9",       # core counts (engine routing) + host-RAM preflight
]

[project.optional-dependencies]
# The agent factory that *generates* bespoke engines (LLM clients, tracing, the
# sandbox, Postgres). Heavy; only needed to build engines, never to run the router.
# Install with: pip install "synnodb[factory]"
factory = [
    "anthropic>=0.84.0",
    "chardet>=5,<6",
    "charset-normalizer>=3.4.5",
    "landlock>=1.0.0.dev5",
    "litellm>=1.82.0",
    "matplotlib>=3.10.8",
    "openai>=2.11.0",
    "openai-agents[litellm]>=0.15.0",
    "prompt-toolkit>=3.0.52",
    "psycopg[binary]>=3.2",
    "psycopg2-binary>=2.9.11",
    "sqlglot>=26.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "urllib3>=2.6.3",
    "wandb>=0.26.0",
    "weave>=0.52.22",
]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0"]
benchmark = ["clickhouse-connect>=0.14.0"]
notebook = [
    "ipykernel>=7.2.0",
    "nbformat>=5.10.4",
]

[project.scripts]
synnodb-optimize = "synnodb.optimize:cli"
pgrouter = "synnodb.misc.router.pgrouter.cli:run"
pgrouter-analyze = "synnodb.misc.router.pgrouter.analyze:main"
pgrouter-inspect = "synnodb.misc.router.pgrouter.inspect:main"

[project.urls]
Homepage = "https://github.com/JWehrstein/SynnoDB"
Repository = "https://github.com/JWehrstein/SynnoDB"

[tool.ruff]
target-version = "py313"
# Research notebooks and the self-contained router sub-project (own pyproject)
# are not part of the package lint gate.
extend-exclude = ["*.ipynb", "src/synnodb/misc/router"]

[tool.ruff.lint]
# Ruff's default rule set (pyflakes F + a curated pycodestyle subset E4/E7/E9),
# minus a few checks whose "violations" are intentional in this codebase.
ignore = [
    "E402",  # module import not at top — several entrypoint scripts import after sys.path setup
    "E712",  # `== True/False` — used deliberately in pandas boolean masks
    "E741",  # ambiguous variable name — a few short names in numeric helpers
    "E731",  # lambda assignment
]

[tool.ruff.lint.per-file-ignores]
# Lazy PEP 562 factory re-exports: names are declared for type-checkers and
# `__all__` but resolved at runtime via __getattr__, so they read as unused
# imports (F401) / undefined-in-`__all__` (F405).
"src/synnodb/__init__.py" = ["F401", "F405"]

[tool.pytest.ini_options]
# Collect the canonical package test suite (CLAUDE.md: "All tests live in the tests/
# folder"). The router sub-project under src/synnodb/misc/router ships its own pyproject
# and run_tests.py; its integration tests launch the router via `uv run` from that dir,
# which resolves the router's own environment (no synnodb installed), so they only run
# under that sub-project's own setup, not the package CI.
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["synnodb*"]

[tool.setuptools.package-data]
"*" = ["*.cpp", "*.hpp", "*.h", "*.txt", "*.sh", "*.html", "*.css", "*.js", "*.jpeg", "*.jpg", "*.json", "*.sql"]
